Fix styling for contact page and make navbar more visible

--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -1,11 +1,3 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
 
 .Logo {
   width: 300px;
@@ -234,22 +226,46 @@ li a {
 }
 
 .ContactUs {
-  background-color: white;
-  margin-right: 10%;
-  margin-left: 10%;
-  height: 50em;
+  width: 100%;
   text-align: center;
 }
+.Contact {
+  width: auto;
+  margin-top: 80px;
+  margin-left: 15%;
+  margin-right: 15%;
+  border-radius: 10px;
+  display: inline-block;
+}
+.ContactContent {
+  width: 100%;
+  height: 530px;
+  text-align: left;
+  border-radius: 30px;
+  background-color: white;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
+}
 .ContactUs img {
-  height: 50em;
+  width: auto;
+  height: 530px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 30px;
+  margin: 0px;
   float: right;
 }
 .ContactUsInfo {
-  text-align: left;
-  margin-top: 100px;
-  margin-left: 30px;
+  width: 45%;
+  height: auto;
+  border-radius: 0;
+  margin: 10px;
+  margin-left: 70px;
+  margin-bottom: 50px;
   display: inline-block;
-  width: 40%;
 }
 
 .ContactUsInfo h1 {
@@ -257,15 +273,17 @@ li a {
   color: #505050;
 }
 
-.ContactUsInfo h3 {
+.ContactUsInfo h4 {
   font-weight: 300;
-  margin-bottom: 40px;
+  width: 85%;
+  margin-bottom: 20px;
   margin-top: 20px;
 }
 
-.ContactUsInfo h4 {
+.ContactUsInfo h5 {
   font-weight: 400;
-  margin-top: 10px;
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
 
 .BookingButtonContact {
@@ -651,6 +669,7 @@ li a {
   width: 100%;
   z-index: 3;
   background-color: #f2f5f6;
+  box-shadow: 0 2px 2px -2px rgba(0,0,0,.5);
 }
 
 .ser-img:hover{
